--- a/project2.html
+++ b/project2.html
@@ -95,9 +95,8 @@
                                   lcd.print(finalval);
                                 }
 
-                                
-                                Note:1.Please change the hotspot name and password with the connected phone to the controller(ESP8266WiFi)
-                                     2.Change the Double quotes in the header file with <>.
+Note:1.Please change the hotspot name and password with the connected phone to the controller(ESP8266Wifi).
+     2.Change the Double quotes in the header file with <>.
         </pre>
         <a href="index.html" class="project-link">Back to Projects</a>
     </section>
